--- a/templates/index.html
+++ b/templates/index.html
@@ -214,7 +214,7 @@
 </head>
 <body>
 <div class="container text-center">
-    <h2 class="mb-4">حساب صلاحيةذالتأشيرة ومدة البقاء في تركيا 🇹🇷 </h2>
+    <h2 class="mb-4">حساب صلاحية التأشيرة ومدة البقاء في تركيا 🇹🇷 </h2>
 
     <!-- إضافة رحلة -->
     <div class="card mb-4">
